tests/testthat/test-summarise-errors.txt

unsupported type
================

> tibble(x = 1, y = c(1, 2, 2), z = runif(3)) %>% summarise(a = env(a = 1))
+ tibble(x = 1, y = c(1, 2, 2), z = runif(3)) %>% group_by(x, y) %>% summarise(a = env(
+   a = 1))
+ tibble(date = seq(as.Date("2020-01-13"), as.Date("2020-01-15"), by = "day"))
+ %>% group_by(date) %>% summarise(a = mean)
+ tibble(x = list(list(1, 2), list(3, 4), list(1, 2))) %>% group_by(x)
+ %>% summarise(a = mean)
+ # # mixed types
+ tibble(id = 1:2, a = list(1, "2")) %>% group_by(id) %>% summarise(a = a[[1]])
+ tibble(id = 1:2, a = list(1, "2")) %>% rowwise() %>% summarise(a = a[[1]])
+ # # incompatible size
+ tibble(z = 1) %>% summarise(x = 1:3, y = 1:2)
+ tibble(z = 1:2) %>% group_by(z) %>% summarise(x = 1:3, y = 1:2)
+ tibble(z = 2:1) %>% group_by(z) %>% summarise(x = seq_len(z), y = 1:2)
+ # # Missing variable
+ summarise(mtcars, a = mean(not_there))
+ summarise(group_by(mtcars, cyl), a = mean(not_there))
Error: <text>:6:1: unexpected SPECIAL
5: tibble(date = seq(as.Date("2020-01-13"), as.Date("2020-01-15"), by = "day"))
6: %>%
   ^

